--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -10,7 +10,7 @@
 .header {
   display: flex;
   align-items: center;
-  width: 25rem;
+  /* width: 25rem; */
   justify-content: space-around;
 }
 
