--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,9 +1,10 @@
 .product {
   display: flex;
   justify-content: space-around;
-  /* width: 60rem; */
-  border: 1px solid #e0d8d8;
+  width: 60rem;
+  border: none;
   border-radius: 10px;
   padding: 2rem;
+  margin: .5rem 0;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
